Rewrote by making state immutable and going from linked list to array list